# planningAgent

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  pytest.ini  run.sh
plancode/: __init__.py  auth.py
plancode/agent/: __init__.py  loop.py  prompts.py
plancode/cli/: main.py
plancode/models/: __init__.py  plan.py
plancode/tests/: test_cli.py  test_filesystem.py  test_models.py
plancode/tools/: __init__.py  analysis.py  execution.py  filesystem.py  workflow.py
plancode/ui/: __init__.py  display.py
